crates/lsharp-ir/src/lower/snapshots/lsharp_ir__lower__tests__lower_adt_match.snap
---
source: crates/lsharp-ir/src/lower/tests.rs
expression: module.dump()
---
fn from-maybe(i64, i64) -> i64:
  locals: i64, i64
  local.get 0
  local.set 2
  local.get 2
  i32.wrap_i64
  i32.load offset=4
  i64.extend_i32_u
  i64.const 0
  i64.eq
  if (i64)
  local.get 2
  i32.wrap_i64
  i64.load offset=8
  local.set 3
  local.get 3
  else
  local.get 2
  i32.wrap_i64
  i32.load offset=4
  i64.extend_i32_u
  i64.const 1
  i64.eq
  if (i64)
  local.get 1
  else
  unreachable
  end
  end

fn main() -> i64:
  i64.const 42
  call 14
  i64.const 0
  call 12

fn Just(i64) -> i64:
  locals: i32
  i64.const 16
  call 1
  i32.wrap_i64
  local.set 1
  local.get 1
  i32.const 3
  i32.store offset=0
  local.get 1
  i32.const 0
  i32.store offset=4
  local.get 1
  local.get 0
  i64.store offset=8
  local.get 1
  i64.extend_i32_u
  i64.const -9223372036854775808
  i64.add

fn Nothing() -> i64:
  locals: i32
  i64.const 8
  call 1
  i32.wrap_i64
  local.set 0
  local.get 0
  i32.const 3
  i32.store offset=0
  local.get 0
  i32.const 1
  i32.store offset=4
  local.get 0
  i64.extend_i32_u
  i64.const -9223372036854775808
  i64.add
