crates/lsharp-ir/src/lower/snapshots/lsharp_ir__lower__tests__lower_bool_literal.snap
---
source: crates/lsharp-ir/src/lower/tests.rs
expression: module.dump()
---
fn main() -> i64:
  i64.const 1
