crates/lsharp-ir/src/lower/snapshots/lsharp_ir__lower__tests__lower_closure.snap
---
source: crates/lsharp-ir/src/lower/tests.rs
expression: module.dump()
---
fn make-adder(i64) -> i64:
  locals: i64
  i64.const 16
  call 1
  local.set 1
  local.get 1
  i32.wrap_i64
  i32.const 4
  i32.store offset=0
  local.get 1
  i32.wrap_i64
  func_idx 14
  i32.store offset=4
  local.get 1
  i32.wrap_i64
  local.get 0
  i64.store offset=8
  local.get 1
  i64.const -9223372036854775808
  i64.add

fn main() -> i64:
  i64.const 0

fn __lambda_0(i64, i64) -> i64:
  locals: i64
  local.get 1
  i32.wrap_i64
  i64.load offset=8
  local.set 2
  local.get 0
  local.get 2
  i64.add
