crates/lsharp-ir/src/lower/snapshots/lsharp_ir__lower__tests__lower_do_block.snap
---
source: crates/lsharp-ir/src/lower/tests.rs
expression: module.dump()
---
fn main() -> i64:
  i64.const 1
  call 0
  i64.const 0
  drop
  i64.const 2
  call 0
  i64.const 0
  drop
  i64.const 42
