crates/lsharp-ir/src/lower/snapshots/lsharp_ir__lower__tests__lower_let_binding.snap
---
source: crates/lsharp-ir/src/lower/tests.rs
expression: module.dump()
---
fn main() -> i64:
  locals: i64, i64
  i64.const 10
  local.set 0
  i64.const 20
  local.set 1
  local.get 0
  local.get 1
  i64.add
