crates/lsharp-ir/src/lower/snapshots/lsharp_ir__lower__tests__lower_match_literal.snap
---
source: crates/lsharp-ir/src/lower/tests.rs
expression: module.dump()
---
fn classify(i64) -> i64:
  locals: i64
  local.get 0
  local.set 1
  local.get 1
  i64.const 0
  i64.eq
  if (i64)
  i64.const 100
  else
  local.get 1
  i64.const 1
  i64.eq
  if (i64)
  i64.const 200
  else
  i64.const 0
  end
  end

fn main() -> i64:
  i64.const 1
  call 12
